# repwise

./: .gitignore  README.md  example.env  pyproject.toml
docs/: system.drawio
docs/dev/: development-guide.md
examples/: google_service_account.py
notebooks/: create_database.ipynb
src/repwise/: __init__.py  config.py  gcloud.py  ingest.py
src/repwise/agents/example/: agent.py
src/repwise/agents/pt/: agent.py
src/repwise/tools/: db.py  mock.py
