[project]
name = "repwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cameron", email = "cameronwood858@googlemail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
repwise = "repwise:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
